syntax = "proto3";

//The namespace of csharp code
//option csharp_namespace = "GreetGrpc"

package GreetGrpc;

// The greeting service definition.
service GreeterGrpcService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}